2016-05-08  Michael R. Crusoe  <michael.crusoe@gmail.com>

   * README.rst: add depsy badge

2016-05-08 Michael R. Crusoe  <michael.crusoe@gmail.com>

   * setup.py,sandbox/{readaligner_pairhmm_train.py,
   Makefile.read_aligner_training}: switch to BAM parsing using simplesam

2016-05-06  Titus Brown  <titus@idyll.org>

   * khmer/_khmer.cc, lib/{counting.cc,counting.hh,hashbits.cc,hashbits.hh,
     hashtable.cc,hashtable.hh,subset.cc,subset.hh},
   sandbox/{fasta-to-abundance-hist.py,find-high-abund-kmers.py
     hi-lo-abundance-by-position.py,stoptag-abundance-hist.py,
     abundance-hist-by-position.py},
   tests/{test_countgraph.py,test_counting_single.py,test_filter.py,
     test_nodegraph.py,test_subset_graph.py}: removed unused functions,
   sandbox scripts, and tests for many functions. Specifically,
   consume_fasta_and_tag_with_stoptags, identify_stop_tags_by_position and
   identify_stoptags_by_position,
   count_and_transfer_to_stoptags, traverse_from_tags,
   filter_if_present, consume_fasta_and_traverse,
   collect_high_abundance_kmers, fasta_dump_kmers_by_abundance,
   fasta_count_kmers_by_position, output_fasta_kmer_pos_freq,
   compare_partitions/compare_to_partition, join_partitions_by_path,
   is_single_partition, and find_unpart function.

   * sandbox/README.rst: updated for removed sandbox scripts.

2016-04-29  Luiz Irber  <khmer@luizirber.org>

   * jenkins-build.sh: add codecov coverage upload tool.

2016-02-17  Daniel Standage <daniel.standage@gmail.com>

   * ./github/CONTRIBUTING.md,.github/PULL_REQUEST_TEMPLATE.md: auto-populate
   pull requests with checklist using GitHub's new template feature
   * doc/dev/coding-guidelines-and-review.rst: update developer docs with
   compensatory changes

2015-08-14  Luiz Irber  <khmer@luizirber.org>

   * lib/subset.cc: check iterator before decrementing in
   repartition_largest_partition

2015-10-25  Titus Brown  <titus@idyll.org>
